--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -2,14 +2,11 @@ set(UCA_CONFIGDIR "${CMAKE_CURRENT_BINARY_DIR}/../src")
 
 add_subdirectory(mock)
 add_subdirectory(file)
-add_subdirectory(pf)
-add_subdirectory(pco)
 add_subdirectory(pylon)
-add_subdirectory(ufo)
 add_subdirectory(dexela)
 
 message("-- Building the following plugins:")
-set(_plugins "mock;file;pf;pco;pylon;ufo;dexela")
+set(_plugins "mock;file;;pylon;dexela")
 
 foreach(_target ${_plugins})
     if (TARGET "uca${_target}")
