Remove ANKA plugins and change versioning scheme for bundled plugins
ANKA plugins are developed and distributed separately like other plugins
depending on vendor SDKs.

The bundled plugins use libuca version as their version and depend on it directly.
This ensures that they always match the libuca version and makes versioning more
transparent for the end users.

Conflicts:
	plugins/mock/CMakeLists.txt

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -2,11 +2,9 @@ set(UCA_CONFIGDIR "${CMAKE_CURRENT_BINARY_DIR}/../src")
 
 add_subdirectory(mock)
 add_subdirectory(file)
-add_subdirectory(pylon)
-add_subdirectory(dexela)
 
 message("-- Building the following plugins:")
-set(_plugins "mock;file;;pylon;dexela")
+set(_plugins "mock;file")
 
 foreach(_target ${_plugins})
     if (TARGET "uca${_target}")
