FIX: Symbol name exported by plugin is causing a recursive call in Windows

--- a/plugins/file/CMakeLists.txt
+++ b/plugins/file/CMakeLists.txt
@@ -22,5 +22,6 @@ if (TIFF_FOUND)
 
     install(TARGETS ucafile
             LIBRARY DESTINATION ${UCA_PLUGINDIR}
+			RUNTIME DESTINATION ${UCA_BINDIR}
             COMPONENT ${UCA_CAMERA_NAME})
 endif ()
