--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,13 @@
 cmake_minimum_required(VERSION 2.6)
+
+if (POLICY CMP0053)
+cmake_policy(SET CMP0053 OLD)
+endif ()
+
+if (POLICY CMP0054)
+cmake_policy(SET CMP0054 OLD)
+endif ()
+
 project(uca C)
 
 #{{{ CMake
