--- a/plugins/file/CMakeLists.txt
+++ b/plugins/file/CMakeLists.txt
@@ -21,8 +21,7 @@ if (TIFF_FOUND)
     target_link_libraries(ucafile uca ${UCA_DEPS} ${TIFF_LIBRARIES})
 
     install(TARGETS ucafile
-            ARCHIVE DESTINATION ${UCA_LIBDIR}
-            LIBRARY DESTINATION ${UCA_PLUGINDIR}
-            RUNTIME DESTINATION ${UCA_PLUGINDIR}
+            LIBRARY DESTINATION ${CMAKE_INSTALL_PLUGINDIR}
+            RUNTIME DESTINATION ${CMAKE_INSTALL_PLUGINDIR}
             COMPONENT ${UCA_CAMERA_NAME})
 endif ()
