--- a/plugins/mock/CMakeLists.txt
+++ b/plugins/mock/CMakeLists.txt
@@ -16,7 +16,6 @@ add_library(ucamock SHARED
 target_link_libraries(ucamock uca m ${UCA_DEPS})
 
 install(TARGETS ucamock
-        ARCHIVE DESTINATION ${UCA_LIBDIR}
-        LIBRARY DESTINATION ${UCA_PLUGINDIR}
-        RUNTIME DESTINATION ${UCA_PLUGINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_PLUGINDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_PLUGINDIR}
         COMPONENT ${UCA_CAMERA_NAME})
