--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -113,25 +113,25 @@ endif()
 #}}}
 #{{{ Installation
 install(TARGETS uca
-        LIBRARY DESTINATION ${UCA_LIBDIR}
-		RUNTIME DESTINATION ${UCA_BINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         COMPONENT libraries)
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libuca.pc
-        DESTINATION ${UCA_PKGCONFIGDIR}
+        DESTINATION ${CMAKE_INSTALL_PKGCONFIGDIR}
         COMPONENT libraries)
 
 install(FILES ${uca_HDRS}
-        DESTINATION ${UCA_INCLUDEDIR}/uca
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/uca
         COMPONENT headers)
 
 if(WITH_GIR)
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${GIR_XML}
-            DESTINATION ${UCA_GIRDIR}
+            DESTINATION ${CMAKE_INSTALL_GIRDIR}
             COMPONENT libraries)
 
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${GIR_TYPELIB}
-            DESTINATION ${UCA_TYPELIBDIR}
+            DESTINATION ${CMAKE_INSTALL_TYPELIBDIR}
             COMPONENT libraries)
 endif()
 #}}}
