--- a/src/config.h.in
+++ b/src/config.h.in
@@ -6,4 +6,4 @@
 #cmakedefine HAVE_PYLON_CAMERA
 #cmakedefine HAVE_DEXELA_CL
 #cmakedefine HAVE_MOCK_CAMERA
-#cmakedefine UCA_PLUGINDIR      "${UCA_PLUGINDIR}"
+#define UCA_PLUGINDIR   "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_PLUGINDIR}"
