--- a/src/libuca.pc.in
+++ b/src/libuca.pc.in
@@ -1,10 +1,10 @@
-prefix=@UCA_PREFIX@
-exec_prefix=@UCA_EPREFIX@
-libdir=@UCA_LIBDIR@
-includedir=@UCA_INCLUDEDIR@
-girdir=@UCA_GIRDIR@
-typelibdir=@UCA_TYPELIBDIR@
-plugindir=@UCA_PLUGINDIR@
+prefix=@CMAKE_INSTALL_PREFIX@
+exec_prefix=@CMAKE_INSTALL_PREFIX@
+libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
+includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
+girdir=${prefix}/@CMAKE_INSTALL_GIRDIR@
+typelibdir=${exec_prefix}/@CMAKE_INSTALL_TYPELIBDIR@
+plugindir=${exec_prefix}/@CMAKE_INSTALL_PLUGINDIR@
 
 Name: libuca
 Description: @UCA_DESCRIPTION@
