grab: show progress during acquisition

--- a/bin/tools/CMakeLists.txt
+++ b/bin/tools/CMakeLists.txt
@@ -19,12 +19,15 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
 include_directories(${CMAKE_CURRENT_BINARY_DIR}
                     ${CMAKE_CURRENT_SOURCE_DIR})
 
-set(BINARIES "benchmark" "gen-doc" "grab" "info")
+set(BINARIES "benchmark" "gen-doc" "info")
 
 foreach (BINARY ${BINARIES})
     add_executable(uca-${BINARY} ${BINARY}.c common.c)
     target_link_libraries(uca-${BINARY} ${libs})
 endforeach ()
+
+add_executable(uca-grab grab.c common.c)
+target_link_libraries(uca-grab ${libs} m)
 
 install(TARGETS uca-benchmark uca-grab uca-gen-doc uca-info
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
