meson: do not require libtiff

--- a/plugins/file/meson.build
+++ b/plugins/file/meson.build
@@ -1,10 +1,12 @@
-tiff_dep = dependency('libtiff-4')
+tiff_dep = dependency('libtiff-4', required: false)
 
-plugin = shared_library('ucafile',
-    sources: ['uca-file-camera.c'],
-    include_directories: include_dir,
-    dependencies: deps + [tiff_dep],
-    link_with: lib,
-    install: true,
-    install_dir: plugindir,
-)
+if tiff_dep.found()
+    shared_library('ucafile',
+        sources: ['uca-file-camera.c'],
+        include_directories: include_dir,
+        dependencies: deps + [tiff_dep],
+        link_with: lib,
+        install: true,
+        install_dir: plugindir,
+    )
+endif
