--- a/plugins/mock/meson.build
+++ b/plugins/mock/meson.build
@@ -1,6 +1,6 @@
 libm = meson.get_compiler('c').find_library('m')
 
-plugin = shared_library('ucamock',
+shared_library('ucamock',
     sources: ['uca-mock-camera.c'],
     include_directories: include_dir,
     dependencies: deps + [libm],
