--- a/src/config.h.in
+++ b/src/config.h.in
@@ -7,3 +7,5 @@
 #cmakedefine HAVE_DEXELA_CL
 #cmakedefine HAVE_MOCK_CAMERA
 #define UCA_PLUGINDIR   "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_PLUGINDIR}"
+#define GLIB_VERSION_MIN_REQUIRED   ${GLIB_VERSION_MIN_REQUIRED}
+#define GLIB_VERSION_MAX_ALLOWED    ${GLIB_VERSION_MAX_ALLOWED}
