Basic build of libuca using conan

--- a/bin/tools/CMakeLists.txt
+++ b/bin/tools/CMakeLists.txt
@@ -1,5 +1,3 @@
-cmake_minimum_required(VERSION 2.6)
-
 #{{{ Variables
 set(libs uca)
 #}}}
@@ -23,11 +21,16 @@ set(BINARIES "benchmark" "gen-doc" "info")
 
 foreach (BINARY ${BINARIES})
     add_executable(uca-${BINARY} ${BINARY}.c common.c)
-    target_link_libraries(uca-${BINARY} ${libs})
+    target_link_libraries(uca-${BINARY} PUBLIC ${libs})
 endforeach ()
 
 add_executable(uca-grab grab.c common.c)
-target_link_libraries(uca-grab ${libs} m)
+target_link_libraries(uca-grab PUBLIC ${libs})
+
+if (GNU)
+  target_link_libraries(uca-grab PUBLIC m)
+endif()
+
 
 install(TARGETS uca-benchmark uca-grab uca-gen-doc uca-info
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
