meson: enable WITH_PYTHON_MULTITHREADING

--- a/src/meson.build
+++ b/src/meson.build
@@ -9,12 +9,22 @@ headers = [
     'uca-plugin-manager.h',
 ]
 
+# Python3.8 requires python3-embed
+python_dep = dependency('python3-embed', required: false)
+if not python_dep.found()
+  python_dep = dependency('python3', required: false)
+endif
+
 plugindir = '@0@/@1@/uca'.format(get_option('prefix'), get_option('libdir'))
 
 conf = configuration_data()
 conf.set_quoted('UCA_PLUGINDIR', plugindir)
 conf.set('GLIB_VERSION_MIN_REQUIRED', 'GLIB_VERSION_2_38')
 conf.set('GLIB_VERSION_MAX_ALLOWED', 'GLIB_VERSION_2_38')
+
+if python_dep.found()
+  conf.set('WITH_PYTHON_MULTITHREADING', true)
+endif
 
 configure_file(
     input: 'config.h.meson.in',
@@ -37,7 +47,7 @@ sources += [enums_c, enums_h]
 
 lib = library('uca',
     sources: sources,
-    dependencies: [glib_dep, gobject_dep, gmodule_dep, gio_dep],
+    dependencies: [glib_dep, gobject_dep, gmodule_dep, gio_dep, python_dep],
     version: version,
     soversion: version_major,
     install: true,
