--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,8 @@
 option('introspection',
     type: 'boolean', value: true,
     description: 'Build introspection data (requires gobject-introspection')
+
+option('with_python_multithreading',
+    type : 'boolean',
+    value : true,
+    description: 'Release Python GIL on long operations')
