--- a/src/config.h.meson.in
+++ b/src/config.h.meson.in
@@ -1,3 +1,4 @@
+#mesondefine WITH_ZMQ_NETWORKING
 #mesondefine WITH_PYTHON_MULTITHREADING
 #mesondefine UCA_PLUGINDIR
 #mesondefine GLIB_VERSION_MIN_REQUIRED
