--- a/src/libuca.pc.in
+++ b/src/libuca.pc.in
@@ -5,6 +5,7 @@ includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 girdir=${prefix}/@CMAKE_INSTALL_GIRDIR@
 typelibdir=${exec_prefix}/@CMAKE_INSTALL_TYPELIBDIR@
 plugindir=${exec_prefix}/@CMAKE_INSTALL_PLUGINDIR@
+with_python_multithreading=@WITH_PYTHON_MULTITHREADING@
 
 Name: libuca
 Description: @UCA_DESCRIPTION@
