fix mock link for windows

--- a/plugins/mock/CMakeLists.txt
+++ b/plugins/mock/CMakeLists.txt
@@ -13,7 +13,10 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../package-plugin.sh.in
 add_library(ucamock SHARED
             uca-mock-camera.c)
 
-target_link_libraries(ucamock uca m ${UCA_DEPS})
+target_link_libraries(ucamock uca ${UCA_DEPS})
+if (NOT WIN32)
+    target_link_libraries(ucamock m)
+endif()
 
 install(TARGETS ucamock
         LIBRARY DESTINATION ${CMAKE_INSTALL_PLUGINDIR}
