--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          conan install .. --build missing
+          conan install .. -o libuca:shared=True --build missing
           cmake ..
           cmake --build .
           cmake --install .
