Deploy everything into one folder and use current directory as default search path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,8 +56,15 @@ endmacro()
 #include(PkgConfigVars)
 include(GNUInstallDirs)
 
+if (MSVC)
+    set(CMAKE_INSTALL_PLUGINDIR ${CMAKE_INSTALL_BINDIR})
+    set(UCA_PLUGINDIR ".")
+else()
+    set(CMAKE_INSTALL_PLUGINDIR ${CMAKE_INSTALL_LIBDIR}/uca)
+    set(UCA_PLUGINDIR ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_PLUGINDIR})
+endif()
+
 set(CMAKE_INSTALL_GIRDIR        "${CMAKE_INSTALL_DATAROOTDIR}/gir-1.0")
-set(CMAKE_INSTALL_PLUGINDIR     "${CMAKE_INSTALL_LIBDIR}/uca")
 set(CMAKE_INSTALL_TYPELIBDIR    "${CMAKE_INSTALL_LIBDIR}/girepository-1.0")
 set(CMAKE_INSTALL_PKGCONFIGDIR  "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
 
