--- a/src/config.h.in
+++ b/src/config.h.in
@@ -6,6 +6,6 @@
 #cmakedefine HAVE_PYLON_CAMERA
 #cmakedefine HAVE_DEXELA_CL
 #cmakedefine HAVE_MOCK_CAMERA
-#define UCA_PLUGINDIR   "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_PLUGINDIR}"
+#define UCA_PLUGINDIR   "${UCA_PLUGINDIR}"
 #define GLIB_VERSION_MIN_REQUIRED   ${GLIB_VERSION_MIN_REQUIRED}
 #define GLIB_VERSION_MAX_ALLOWED    ${GLIB_VERSION_MAX_ALLOWED}
